--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ requests==2.25.1
 selenium==3.141.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.19
-urllib3==1.26.5
+urllib3==1.26.5   
+boto3==1.17.101 
+botocore==1.20.101
