--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ SQLAlchemy==1.4.19
 urllib3==1.26.5   
 boto3==1.17.101 
 botocore==1.20.101
-psycopg2==2.9.1
+psycopg2
 pandas==1.2.5
 urllib3==1.26.5
