--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,9 @@ boto3==1.17.101
 botocore==1.20.101
 pandas==1.2.5
 urllib3==1.26.5
-sklearn==0.0    
+sklearn==0.0 
+torch==1.9.0
+torchaudio==0.9.0a0+33b2469
+torchvision==0.10.0
+tensorboard==2.6.0 
 psycopg2
