--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 beautifulsoup4==4.9.3
+boto3==1.17.101
+botocore==1.20.101
 bs4==0.0.1
 certifi==2021.5.30
 chardet==4.0.0
 greenlet==1.1.0
 idna==2.10
+jmespath==0.10.0
+joblib==1.0.1
+numpy==1.21.0
+pandas==1.2.5
+psycopg2
+python-dateutil==2.8.1
+pytz==2021.1
 requests==2.25.1
+s3transfer==0.4.2
+scikit-learn==0.24.2
+scipy==1.7.1
 selenium==3.141.0
+six==1.16.0
+sklearn==0.0
+skorch==0.10.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.19
-urllib3==1.26.5   
-boto3==1.17.101 
-botocore==1.20.101
-pandas==1.2.5
+tabulate==0.8.9
+threadpoolctl==2.2.0
+tqdm==4.62.1
 urllib3==1.26.5
-sklearn==0.0 
-torch==1.9.0
-torchaudio==0.9.0a0+33b2469
-torchvision==0.10.0
-tensorboard==2.6.0 
-psycopg2
