--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ botocore==1.20.101
 bs4==0.0.1
 certifi==2021.5.30
 chardet==4.0.0
+colorama==0.4.4
 greenlet==1.1.0
 idna==2.10
 jmespath==0.10.0
 joblib==1.0.1
 numpy==1.21.0
 pandas==1.2.5
+Pillow==8.3.2
 psycopg2
 python-dateutil==2.8.1
 pytz==2021.1
@@ -25,5 +27,8 @@ soupsieve==2.2.1
 SQLAlchemy==1.4.19
 tabulate==0.8.9
 threadpoolctl==2.2.0
+torch==1.9.0
+torchvision==0.10.0
 tqdm==4.62.1
+typing-extensions==3.10.0.2
 urllib3==1.26.5
